# AI_MCP_Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
data/: app.db  products.json
src/adapters/llm_mock/: rule_llm.py
src/adapters/mcp_stdio/: client.py  orders_repo.py  process.py  products_repo.py  unwrap.py
src/adapters/storage/: json_products.py  sqlite_orders.py  sqlite_products.py
src/agent/: graph.py  orchestrator.py  state.py
src/core/: config.py  logging.py
src/domain/: formatting.py  models.py  pricing.py
src/entrypoints/api/: deps.py  main.py
src/entrypoints/api/v1/: routes.py  schemas.py
src/entrypoints/mcp_orders_server/: server.py
src/entrypoints/mcp_products_server/: server.py
src/entrypoints/mcp_products_server/data/: products.json
src/ports/: llm.py  orders.py  products.py
tests/integration/: test_api_e2e.py  test_mcp_stdio_orders.py  test_mcp_stdio_products.py
tests/unit/: test_domain_pricing.py
